--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  /* This will only affect the scrollbar in the .custom-scrollbar */
+  .custom-scrollbar::-webkit-scrollbar {
+    width: theme("spacing.2"); /* width of the entire scrollbar */
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: theme("colors.gray.200"); /* color of the tracking area */
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background: theme("colors.gray.500"); /* color of the scroll thumb */
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background: theme(
+      "colors.gray.700"
+    ); /* color of the scroll thumb on hover */
+  }
+}
