--- a/src/index.css
+++ b/src/index.css
@@ -10,10 +10,14 @@
 
   .custom-scrollbar::-webkit-scrollbar-track {
     background: theme("colors.gray.200"); /* color of the tracking area */
+    border: 1px solid #cacaca;
+    border-radius: 8px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   }
 
   .custom-scrollbar::-webkit-scrollbar-thumb {
     background: theme("colors.gray.500"); /* color of the scroll thumb */
+    border-radius: 8px;
   }
 
   .custom-scrollbar::-webkit-scrollbar-thumb:hover {
